<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OcrBall</string>
    <string name="button_camera_scan">Camera\nScan</string>
    <string name="button_select_image">Select\nImage</string>
    <string name="button_active_ocr">Active\nOcrball</string>
    <string name="default_prompt">OcrBall is a project to help recognise the characters in the picture!\n\nPlease select one image!</string>
    <string name="resault_title">The ocr resault is:</string>
    <string name="resault_content">This is content!</string>
    <string name="back">back</string>
    <string name="screenshot">screenshot</string>

    <string name="action_menu_platform_title">Platform - <xliff:g>%s</xliff:g></string>
    <string name="platform_td">Tesseract</string>
    <string name="platform_bd">Baidu</string>
    <string name="platform_google">Google</string>
    <string name="platform_dialog_title">Choce one platform for your OCR!</string>

    <string name="action_menu_language_title">Launuage - <xliff:g>%s</xliff:g></string>
    <string name="language_eng">eng</string>
    <string name="language_chi_sim">chi_sim</string>
    <string name="language_chi_tra">chi_tra</string>
    <string name="language_dialog_title">Choce one platform for your OCR!</string>

    <string name="title_activity_screen_shot">ScreenShotActivity</string>
    <string name="can_not_capture_under_5_0">System under 5.0 does not support screenshots</string>
    <string name="screen_capture_fail">Sorry for capturing screen fail</string>
    <string name="file_notexist">This screenshot file is not found!</string>
    <string name="file_savesuccess">"screenshot save success"</string>

</resources>
