<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/introduce_textview"
        android:text="@string/introduce"
        android:textSize="@dimen/introduce_text_size"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPanel"
        android:layout_marginBottom="@dimen/resault_layout_padding"
        android:layout_marginTop="@dimen/resault_layout_padding"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/default_prompt_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_prompt"
            android:textAlignment="center"
            android:textSize="@dimen/default_prompt_text_size"
            android:textStyle="bold"
            android:alpha="0.2"
            android:textColor="@color/colorDark"
            android:layout_centerInParent="true"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPanel"
                android:layout_centerVertical="true">
                <LinearLayout
                    android:id="@+id/ocr_resault_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="invisible">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resault_title"
                        android:textStyle="bold"
                        android:textSize="@dimen/resault_text_title_size"/>
                    <TextView
                        android:id="@+id/ocr_resault_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/resault_text_margin_top"
                        android:text="@string/resault_content"
                        android:textSize="@dimen/resault_text_content_size"/>
                </LinearLayout>
            </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/select_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/button_size"
            android:text="@string/button_select_image"/>
        <Button
            android:id="@+id/active_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/button_size"
            android:text="@string/button_active_ocr"/>
    </LinearLayout>
</RelativeLayout>
